# qqbot

./: .gitignore  .pre-commit-config.yaml  README.md  bot.py  pyproject.toml
.github/workflows/: trigger_remote_deploy.yml
qqbot/: constants.py  utils.py
qqbot/plugins/admin/: __init__.py
qqbot/plugins/admin/plugins/bot_utils/: __init__.py
qqbot/plugins/admin/plugins/echo/: __init__.py
qqbot/plugins/url_seeker/: __init__.py
qqbot/plugins/url_seeker/plugins/bilibili/: __init__.py  data_sources.py
tests/: conftest.py  test_utils.py
tests/plugins/admin/: test_bot_utils.py
